--- a/index.html
+++ b/index.html
@@ -131,6 +131,10 @@
             p.setAttribute("class", "time");
             p.innerText = time;
 
+            // btn.addEventListener("click", () => {
+            //     li.remove();
+            // })
+
             ul.append(li);
             li.append(div);
             div.append(label);
